package pp;

message Result {
  required bool success = 1;

  optional int32 errcode = 2;
  optional string reason = 3;
}

message EmptyRes {
  required Result result = 1;
}

enum ErrCode {
    Success = 0;
    WrongFormat = 10;
    WrongPubkey = 20;
    WrongRequest = 21;

    UnAuthorized = 31;
    NotExits = 32;
    AlreadyExits = 33;

    ServerError = 40;

    BroadcastTxFail = 50;
};
